add_executable(vmp-clang ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_clang.cpp)
add_executable(vmp-clang++ ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_clangxx.cpp)
vmp_add_placeholder_tool(vmp-link ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_link.cpp)
add_executable(vmp-protect ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_protect.cpp)
add_executable(vmp-string-protect ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_string_protect.cpp)

foreach(target IN ITEMS vmp-clang vmp-clang++)
  target_link_libraries(${target} PRIVATE vmp_build_options)
  set_target_properties(${target} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)
  target_compile_definitions(${target} PRIVATE
    VMP_CPP_FALLBACK_SCANNER_PATH="$<TARGET_FILE:${VMP_BINDINGS_CPP_FALLBACK_TOOL_TARGET}>")
  if(VMP_BINDINGS_CPP_AST_TOOL_TARGET)
    target_compile_definitions(${target} PRIVATE
      VMP_CPP_COLLECTOR_TOOL_PATH="$<TARGET_FILE:${VMP_BINDINGS_CPP_AST_TOOL_TARGET}>")
  else()
    target_compile_definitions(${target} PRIVATE VMP_CPP_COLLECTOR_TOOL_PATH="")
  endif()
  if(VMP_BINDINGS_CPP_HAVE_CLANG_PLUGIN)
    target_compile_definitions(${target} PRIVATE
      VMP_CPP_PLUGIN_PATH="$<TARGET_FILE:${VMP_BINDINGS_CPP_PLUGIN_TARGET}>")
  else()
    target_compile_definitions(${target} PRIVATE VMP_CPP_PLUGIN_PATH="")
  endif()
endforeach()

set_target_properties(vmp-protect PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)
set_target_properties(vmp-string-protect PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)

target_link_libraries(vmp-protect PRIVATE vmp_backend_rewriter vmp_policy vmp_runtime_audit vmp_runtime_strings vmp_runtime_state nlohmann_json::nlohmann_json)
target_link_libraries(vmp-string-protect PRIVATE vmp_runtime_strings vmp_policy nlohmann_json::nlohmann_json)

add_executable(vmp-vm1-asm ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_vm1_asm.cpp)
target_link_libraries(vmp-vm1-asm PRIVATE vmp_runtime_vm1)
set_target_properties(vmp-vm1-asm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)

add_executable(vmp-vm1-run ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_vm1_run.cpp)
target_link_libraries(vmp-vm1-run PRIVATE vmp_runtime_vm1 vmp_runtime_audit vmp_runtime_strings vmp_runtime_state nlohmann_json::nlohmann_json)
if(UNIX AND NOT APPLE)
  target_link_options(vmp-vm1-run PRIVATE -Wl,--export-dynamic)
elseif(APPLE)
  target_link_options(vmp-vm1-run PRIVATE -Wl,-export_dynamic)
endif()
set_target_properties(vmp-vm1-run PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)

add_executable(vmp-vm2-asm ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_vm2_asm.cpp)
target_link_libraries(vmp-vm2-asm PRIVATE vmp_runtime_vm2)
set_target_properties(vmp-vm2-asm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)

add_executable(vmp-vm2-run ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_vm2_run.cpp)
target_link_libraries(vmp-vm2-run PRIVATE vmp_runtime_vm2 vmp_runtime_audit vmp_runtime_strings vmp_runtime_state nlohmann_json::nlohmann_json)
if(UNIX AND NOT APPLE)
  target_link_options(vmp-vm2-run PRIVATE -Wl,--export-dynamic)
elseif(APPLE)
  target_link_options(vmp-vm2-run PRIVATE -Wl,-export_dynamic)
endif()
set_target_properties(vmp-vm2-run PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)

add_executable(vmp-profile-tool ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_profile_tool.cpp)
target_link_libraries(vmp-profile-tool PRIVATE vmp_runtime_state nlohmann_json::nlohmann_json)
set_target_properties(vmp-profile-tool PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)


if(VMP_PLATFORM STREQUAL "windows")
  add_executable(vmp-loader-selftest ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_loader_selftest.cpp)
  target_link_libraries(vmp-loader-selftest PRIVATE vmp_loader_windows)
  target_compile_definitions(vmp-loader-selftest PRIVATE VMP_SELFTEST_WINDOWS=1)
  set_target_properties(vmp-loader-selftest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)
elseif(VMP_PLATFORM STREQUAL "linux")
  add_executable(vmp-loader-selftest ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_loader_selftest.cpp)
  target_link_libraries(vmp-loader-selftest PRIVATE vmp_loader_linux)
  target_compile_definitions(vmp-loader-selftest PRIVATE VMP_SELFTEST_LINUX=1)
  target_link_options(vmp-loader-selftest PRIVATE -Wl,--no-as-needed)
  set_target_properties(vmp-loader-selftest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)
elseif(VMP_PLATFORM STREQUAL "android")
  add_executable(vmp-loader-selftest ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_loader_selftest.cpp)
  target_link_libraries(vmp-loader-selftest PRIVATE vmp_loader_android)
  target_compile_definitions(vmp-loader-selftest PRIVATE VMP_SELFTEST_ANDROID=1)
  set_target_properties(vmp-loader-selftest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)
elseif(VMP_PLATFORM STREQUAL "ios")
  add_executable(vmp-loader-selftest ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_loader_selftest.cpp)
  target_link_libraries(vmp-loader-selftest PRIVATE vmp_loader_ios)
  target_compile_definitions(vmp-loader-selftest PRIVATE VMP_SELFTEST_IOS=1)
  set_target_properties(vmp-loader-selftest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)
endif()

add_executable(vmp-state-probe ${CMAKE_CURRENT_SOURCE_DIR}/src/vmp_state_probe.cpp)
target_link_libraries(vmp-state-probe PRIVATE vmp_runtime_state vmp_runtime_audit vmp_runtime_strings vmp_runtime_integrity nlohmann_json::nlohmann_json)
set_target_properties(vmp-state-probe PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tools)
